# Gaiasenses-web

./: .gitignore  README.md  components.json  flor02_4.pd  lluviaMessage.js  lluviaMessage.pd  lluviaOriginal.js  lluviaOriginal.pd  lluviaSlider.pd  lluviaSliderOutput.wasm  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json
app/: app-title.tsx  audio-stopper.tsx  collapisable-weather-info.tsx  composition-container.tsx  geolocation-button.tsx  globals.css  layout.tsx  loading.tsx  location-bar.tsx  page.tsx  top-bar.tsx
app/[locale]/: layout.tsx  page.tsx
app/map/: compositions-combobox.tsx  error-boundry-client.tsx  location-marker.tsx  map.tsx  page.tsx
app/map2/: auto-fade-container.tsx  client-map.tsx  fade-container.tsx  floating-help-box.tsx  info-panel.tsx  light-control.tsx  marker-base.tsx  page.tsx  popup-base.tsx  popup-content.tsx  popup-location-info.tsx  popup-weather-info.tsx  (+2 more)
components/: dataSender.tsx  force-tab-title.tsx  geolocation-provider.tsx  getData.ts  getOpenMeteo.ts  register-pd4web-sw.tsx  supabase.ts  webpd-script.tsx
gabriel-pd4-web/: CMakeLists.txt  testeGlobo.pd
gabriel-pd4-web/Pd4Web/: config.h  externals.cpp  versions.yaml
gabriel-pd4-web/Pd4Web/pure-data/src/: s_inter.c
gabriel-pd4-web/WebPatch/: index.html  pd4web.data  pd4web.js
hooks/: orientation-context.tsx  types.ts  use-interval.ts  use-pd4web.ts  use-timeout.ts  use-webpd.tsx  webpd-context.tsx  webrtc-context.tsx
lib/: notifications.js  pd4web-runtime.ts  usersdb.js
messages/: en.json  pt.json
public/: ambient_2.wasm  lluviaMessage.wasm  lluviaSlider.wasm  sw.js  test.js
scripts/: normalize-pd4web-bundle.mjs  sensor-websocket-server.mjs
types/: window.d.ts
(+187 files in other folders)
